--- a/about.html
+++ b/about.html
@@ -56,11 +56,9 @@
           <div class="intro-sub-sections">
             <div class="intro-sub-section">
               <h3 id="about_us">About Us</h3>
-              <p>
                 <p>
-                  Just like the sport itself, we are all about quick reflexes, strategic plays, and relentless energy. We believe in the spirit of teamwork and pusing boundaries.
+                  Just like the sport itself, we are all about quick reflexes, strategic plays, and relentless energy. We believe in the spirit of teamwork and pushing boundaries.
                 </p>
-              </p>
             </div>
             <div class="intro-sub-section">
               <h3>About Portfolio</h3>
@@ -107,17 +105,17 @@
           </div>
         </div>
         <div class="vision-text">
-          <h2>My Vision</h2>
+          <h2>Our Vision</h2>
           <div class="vision-item">
-            <span class="vision-number">01.</span>
+            <span class="vision-number">01. The Journey Ahead</span>
             <p>
-              At the heart of my journey lies a clear and compelling vision—a vision that drives every decision and fuels every effort. My vision is to [achieve/transform/innovate] in ways that not only meet the needs of today but also anticipate and shape the opportunities of tomorrow.
+              At the heart of our journey lies a clear and compelling vision—a vision that drives every decision and fuels every effort. Our vision is to [achieve/transform/innovate] in ways that not only meet the needs of today but also anticipate and shape the opportunities of tomorrow.
             </p>
           </div>
           <div class="vision-item">
-            <span class="vision-number">02.</span>
+            <span class="vision-number">02. The Magic of Friendship</span>
             <p>
-              I believe in the power of collaboration and mentorship. My vision includes empowering those around me—whether it's through sharing knowledge, providing guidance, or fostering an environment where creativity and skills can flourish. By uplifting others, we can achieve collective success.
+              I believe in the power of collaboration and mentorship. Our vision includes empowering those around me—whether it's through sharing knowledge, providing guidance, or fostering an environment where creativity and skills can flourish. By uplifting others, we can achieve collective success.
             </p>
           </div>
         </div>
@@ -127,29 +125,29 @@
     <section class="my-mission">
       <div class="mission-content">
         <div class="mission-text">
-          <h2>My Mission</h2>
+          <h2>Our Mission</h2>
           <div class="mission-item">
-            <span class="mission-number">01.</span>
+            <span class="mission-number">01. Innovate Continuously</span>
             <p>
-              Innovate Continuously: We are dedicated to pushing the boundaries of what's possible by embracing creativity and adopting the latest technologies. Our mission is to deliver innovative solutions that meet evolving needs and set new industry standards.
+              We are dedicated to pushing the boundaries of what's possible by embracing creativity and adopting the latest technologies. Our mission is to deliver innovative solutions that meet evolving needs and set new industry standards.
             </p>
           </div>
           <div class="mission-item">
-            <span class="mission-number">02.</span>
+            <span class="mission-number">02. Deliver Excellence </span>
             <p>
-              Deliver Excellence: Our commitment to excellence drives us to exceed expectations in every project and interaction. We strive for the highest quality in our work, ensuring that our solutions are not only effective but also reliable and impactful.
+              Our commitment to excellence drives us to exceed expectations in every project and interaction. We strive for the highest quality in our work, ensuring that our solutions are not only effective but also reliable and impactful.
             </p>
           </div>
           <div class="mission-item">
-            <span class="mission-number">03.</span>
+            <span class="mission-number">03. Empower and Collaborate</span>
             <p>
-              Empower and Collaborate: We believe in the power of teamwork and collaboration. By empowering our team members, partners, and clients, we foster a culture of mutual respect and shared success. Our mission is to create an environment where everyone can contribute their best and achieve collective goals.
+             We believe in the power of teamwork and collaboration. By empowering our team members, partners, and clients, we foster a culture of mutual respect and shared success. Our mission is to create an environment where everyone can contribute their best and achieve collective goals.
             </p>
           </div>
           <div class="mission-item">
-            <span class="mission-number">04.</span>
+            <span class="mission-number">04. Create Lasting Impact</span>
             <p>
-              Create Lasting Impact: We are dedicated to making a positive difference in the communities we serve. Through sustainable practices and ethical approaches, we aim to create meaningful and lasting impact that benefits society and supports long-term growth.
+              We are dedicated to making a positive difference in the communities we serve. Through sustainable practices and ethical approaches, we aim to create meaningful and lasting impact that benefits society and supports long-term growth.
             </p>
           </div>
         </div>
@@ -158,10 +156,13 @@
             <div><img src="bad1.JPG" alt="Mission Image 1" /></div>
           </div>
           <div class="mission-image">
-            <div><img src="bad3.JPG" alt="Mission Image 2" /></div>
+            <div><img src="sanvit-weights.jpg" alt="Mission Image 2" /></div>
           </div>
           <div class="mission-image">
-            <div><img src="bad2.JPG" alt="Mission Image 3" /></div>
+            <div><img src="bad3.JPG" alt="Mission Image 3" /></div>
+          </div>
+          <div class="mission-image">
+            <div><img src="weights2.JPG" alt="Mission Image 3" /></div>
           </div>
         </div>
       </div>
@@ -190,7 +191,7 @@
           </p>
         </div>
         <div class="thank-you-image">
-          <img src="scammaverick.png" alt="Thank You Image" />
+          <img src="thankyou.png" alt="Thank You Image" />
         </div>
       </div>
     </section>
