removed video + used college photo

--- a/about.html
+++ b/about.html
@@ -77,11 +77,11 @@
     <section class="about-me">
       <div class="about-images">
         <div class="about-image">
-          <img src="aouchitya.HEIC" alt="Image 2" />
+          <img src="aouchitya.HEIC" alt="Image 1" />
           <h2 align="center">Aouchitya Gawande</h2>
         </div>
         <div class="about-image">
-          <img src="sanvit.jpeg" alt="Image 1" />
+          <img src="sanvit-on-grind.jpg" alt="Image 2" />
           <h2 align="center">Sanvit Katrekar</h2>
         </div>
         <div class="about-image">
