--- a/new_product.html
+++ b/new_product.html
@@ -35,11 +35,11 @@ p
 We're the Mavericks!
 </div>
 <a href="index.html"><div class="option1">HOME </div></a> 
-<a href="products.html"><div class="option2">Our Products</div></a> 
+<a href="products.html"><div class="option2">Our Gear</div></a> 
 <a href="about.html"><div class="option3">About Us</div></a>
 </head>
 <body>
 <p></p>
-<div class="our_products">Our Products</div>
+<div class="our_products">Our Gear</div>
 </body>
 </html>
