--- a/products.html
+++ b/products.html
@@ -21,14 +21,12 @@ p:hover
 We're the Mavericks!
 </div>
 <a href="index.html"><div class="option1">HOME </div></a> 
-<a href="products.html"><div class="option2">Our Products</div></a> 
+<a href="products.html"><div class="option2">Our Gear</div></a> 
 <a href="about.html"><div class="option3">About Us</div></a>
 </head>
 <body>
-<video width="800" height="600" autoplay controls>
-  <source src="movie.mp4" type="video/mp4">
-</video>
-<div id="transition"><p><a href="new_product.html">Click here to look at our Products</a> 
+  <img src="thankyou.png" style="height: 80vh; padding: 50px;">
+<div id="transition"><p><a href="new_product.html">Click here to look at the gear we use!</a> 
 <p style="font-size:16px;text-align:center;">
 Cricket Bat<br><img src="bat.jpg" width="150px" height="150px"><br>Cost:7000 rupees<br><br><br>
 Football Equipment <br><img src="football.jpg" width="150px" height="150px"><br><br>Cost:2500 rupees<br><br>
