--- a/scam.html
+++ b/scam.html
@@ -39,8 +39,8 @@
 <div class="basic">
 	Hi, We're the Mavericks
 </div>
-<a href="index.html"><div class="option1">HOME </div></a> 
-<a href="products.html"><div class="option2">Our Products</div></a> 
+<a href="index.html"><div class="option1">Home </div></a> 
+<a href="products.html"><div class="option2">Our Gear</div></a> 
 <a href="about.html"><div class="option3">About Us</div></a>
 </head>
 <body>
