attempt to fix 4th image render issue

--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
             <div><img src="bad3.JPG" alt="Mission Image 3" /></div>
           </div>
           <div class="mission-image">
-            <div><img src="weights2.JPG" alt="Mission Image 3" /></div>
+            <img src="weights2.jpg" alt="Mission Image 4" />
           </div>
         </div>
       </div>
