fix: heic changed to jpg, now renders imgs render on chrome

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
     <section class="about-me">
       <div class="about-images">
         <div class="about-image">
-          <img src="aouchitya.HEIC" alt="Image 1" />
+          <img src="aouchitya.jpg" alt="Image 1" />
           <h2 align="center">Aouchitya Gawande</h2>
         </div>
         <div class="about-image">
@@ -85,7 +85,7 @@
           <h2 align="center">Sanvit Katrekar</h2>
         </div>
         <div class="about-image">
-          <img src="sid.HEIC" alt="Image 3" />
+          <img src="sid.jpg" alt="Image 3" />
           <h2 align="center">Siddarth Nair</h2>
         </div>
       </div>
